--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,10 @@
-# MySQL 데이터베이스 연결 설정
+# MariaDB 데이터베이스 연결 설정
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/jeja?useSSL=false&serverTimezone=UTC&characterEncoding=UTF-8
-    username: root
-    password: ddgh930810
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mariadb://localhost:3306/jeja?useSSL=false&serverTimezone=UTC&characterEncoding=UTF-8
+    username: jejauser
+    password: 0000
+    driver-class-name: org.mariadb.jdbc.Driver
 
   # JPA 설정
   jpa:
@@ -14,7 +14,7 @@ spring:
     properties:
       hibernate:
         format_sql: true
-    database-platform: org.hibernate.dialect.MySQL8Dialect
+    database-platform: org.hibernate.dialect.MariaDBDialect
 
   # Thymeleaf 설정
   thymeleaf:
