--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,7 @@
 # MariaDB 데이터베이스 연결 설정
 spring:
   datasource:
-    url: jdbc:mariadb://localhost:3306/jeja?useSSL=false&serverTimezone=UTC&characterEncoding=UTF-8
-    username: jejauser
+    url: jdbc:mariadb://localhost:3306/jeja
     password: 0000
     driver-class-name: org.mariadb.jdbc.Driver
 
