--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,7 @@
 spring:
   datasource:
     url: jdbc:mariadb://localhost:3306/jeja
+    username: jejauser
     password: 0000
     driver-class-name: org.mariadb.jdbc.Driver
 
