--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 # MariaDB 데이터베이스 연결 설정
 spring:
   datasource:
-    url: jdbc:mariadb://localhost:3306/jeja
+    url: jdbc:mariadb://127.0.0.1:3306/jeja?useSSL=false&allowPublicKeyRetrieval=true
     username: jejauser
     password: 0000
     driver-class-name: org.mariadb.jdbc.Driver
