--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,20 +1,20 @@
 # MariaDB 데이터베이스 연결 설정
 spring:
   datasource:
-    url: jdbc:mariadb://127.0.0.1:3306/jeja?useSSL=false&allowPublicKeyRetrieval=true
-    username: jejauser
-    password: 0000
-    driver-class-name: org.mariadb.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/jeja?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul
+    username: root
+    password: Ddgh93081)
+    driver-class-name: com.mysql.cj.jdbc.Driver
 
-  # JPA 설정
-  jpa:
+    # JPA 설정
+    jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
     properties:
       hibernate:
+        dialect: org.hibernate.dialect.MySQLDialect
         format_sql: true
-    database-platform: org.hibernate.dialect.MariaDBDialect
 
   # Thymeleaf 설정
   thymeleaf:
